[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/environment/6_Music_and_sport_16x16.png" type="Texture" id=1]
[ext_resource path="res://characters/player/Flashbang.gd" type="Script" id=2]
[ext_resource path="res://assets/light_area.png" type="Texture" id=3]
[ext_resource path="res://sfx/bang_06.wav" type="AudioStream" id=4]
[ext_resource path="res://sfx/bang_07.wav" type="AudioStream" id=5]
[ext_resource path="res://utility/PlayRandomSound.gd" type="Script" id=6]
[ext_resource path="res://sfx/click/click_005.wav" type="AudioStream" id=7]
[ext_resource path="res://sfx/click/click_001.wav" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[sub_resource type="CircleShape2D" id=2]
radius = 200.0

[node name="Flashbang" type="KinematicBody2D" groups=[
"instanced",
]]
collision_layer = 0
collision_mask = 7
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.74846e-07
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 117, 357, 7, 11 )

[node name="FlashArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlashArea"]
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="." groups=[
"instanced",
]]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
color = Color( 0.976471, 1, 0.811765, 1 )
energy = 2.0
shadow_enabled = true

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="BangSounds" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="BangSounds"]
stream = ExtResource( 4 )
bus = "sfx"

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="BangSounds"]
stream = ExtResource( 5 )
bus = "sfx"

[node name="ClickSounds" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="ClickSounds"]
stream = ExtResource( 8 )
bus = "sfx"

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="ClickSounds"]
stream = ExtResource( 7 )
bus = "sfx"

[connection signal="timeout" from="FlashTimer" to="Light2D" method="hide"]
